--- a/src/main/resources/com/example/demofx1/FXML/CardProduct.fxml
+++ b/src/main/resources/com/example/demofx1/FXML/CardProduct.fxml
@@ -8,20 +8,23 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="175.0" prefWidth="175.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demofx1.FXML.CardProduct">
+<AnchorPane fx:id="cardForm" prefHeight="175.0" prefWidth="175.0" style="-fx-border-color: #b4b4b4; -fx-border-style: dashed; -fx-border-radius: 5;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demofx1.Controller.CardProductController">
    <children>
       <VBox layoutY="-50.0" prefHeight="175.0" prefWidth="190.4" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <HBox prefHeight="25.0" prefWidth="175.0">
                <children>
-                  <Label prefHeight="31.0" prefWidth="109.0" text="TÊN SẢN PHẨM">
+                  <Label fx:id="namePro" prefHeight="31.0" prefWidth="109.0" text="TÊN SẢN PHẨM">
                      <HBox.margin>
                         <Insets left="5.0" top="5.0" />
                      </HBox.margin>
+                     <font>
+                        <Font name="System Bold Italic" size="12.0" />
+                     </font>
                   </Label>
-                  <Label prefHeight="25.0" prefWidth="56.0" text="GIÁ">
+                  <Label fx:id="pricePro" contentDisplay="RIGHT" prefHeight="18.0" prefWidth="79.0" text="GIÁ">
                      <HBox.margin>
                         <Insets left="5.0" right="5.0" top="5.0" />
                      </HBox.margin>
@@ -30,13 +33,16 @@
             </HBox>
             <AnchorPane prefHeight="111.0" prefWidth="175.0">
                <children>
-                  <ImageView fitHeight="111.0" fitWidth="175.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                  <ImageView fx:id="proImage" fitHeight="111.0" fitWidth="175.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                </children>
             </AnchorPane>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
                <children>
-                  <Spinner prefHeight="26.0" prefWidth="73.0" />
-                  <Button mnemonicParsing="false" text="ADD" />
+                  <Spinner fx:id="productSpin" prefHeight="26.0" prefWidth="73.0" />
+                  <Button fx:id="productBut" mnemonicParsing="false" onAction="#setAddProduct" style="-fx-background-color: #008c00;" text="ADD">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font></Button>
                </children>
                <VBox.margin>
                   <Insets />
@@ -45,4 +51,7 @@
          </children>
       </VBox>
    </children>
+   <opaqueInsets>
+      <Insets bottom="5.0" right="5.0" top="5.0" />
+   </opaqueInsets>
 </AnchorPane>
