--- a/src/main/resources/com/example/demofx1/FXML/LoginScreen.fxml
+++ b/src/main/resources/com/example/demofx1/FXML/LoginScreen.fxml
@@ -35,9 +35,9 @@
                      </font>
                   </Label>
                   <Line endX="194.00003051757812" endY="-1.52587890625E-5" layoutX="112.0" layoutY="141.0" startX="-62.000038146972656" startY="-1.52587890625E-5" />
-                  <ImageView fitHeight="310.0" fitWidth="327.0" layoutX="5.0" layoutY="225.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="img" fitHeight="310.0" fitWidth="327.0" layoutX="5.0" layoutY="225.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="file:/C:\Users\Admin\IdeaProjects\BAMBOO\src\main\resources\com\example\demofx1\Images\logo.png" />
+                        <Image url="file:C:\Users\Admin\IdeaProjects\BAMBOO\src\main\resources\com\example\demofx1\Images\logo.png" />
                      </image>
                   </ImageView>
                </children>
