--- a/src/main/resources/com/example/demofx1/VIEW/CardProduct.fxml
+++ b/src/main/resources/com/example/demofx1/VIEW/CardProduct.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="cardForm" prefHeight="175.0" prefWidth="175.0" style="-fx-border-color: #b4b4b4; -fx-border-style: dashed; -fx-border-radius: 5;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demofx1.Controller.CardProductController">
+<AnchorPane fx:id="cardForm" prefHeight="175.0" prefWidth="175.0" style="-fx-border-color: #b4b4b4; -fx-border-style: dashed; -fx-border-radius: 5;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demofx1.CONTROLLER.CardProductController">
    <children>
       <VBox layoutY="-50.0" prefHeight="175.0" prefWidth="190.4" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
