--- a/src/main/resources/com/example/demofx1/VIEW/HomeAdmin.fxml
+++ b/src/main/resources/com/example/demofx1/VIEW/HomeAdmin.fxml
@@ -22,7 +22,7 @@
 <?import javafx.scene.text.Font?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demofx1.Controller.HomeAdminController">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demofx1.CONTROLLER.HomeAdminController">
    <children>
       <AnchorPane prefHeight="200.0" prefWidth="200.0">
          <children>
